--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -133,8 +133,30 @@ canvas {
     object-fit:cover;
 }
 
-.description {
+.cluster-container {
     width: 100%;
-    height: 30%;
-    background-color: blue;
+    height: 60%;
+    overflow-y: hidden;
+    overflow-x: hidden;
 }
+
+
+.cluster-container:hover{
+    overflow-y: auto;
+  }
+.cluster-container::-webkit-scrollbar {
+  width: 2px;
+}
+.cluster-container::-webkit-scrollbar-track-piece {
+  background-color: #fff;
+} /* 滚动条的内层滑轨背景颜色 */
+.cluster-container::-webkit-scrollbar-track {
+  background-color: #fff;
+} /* 滚动条的外层滑轨背景颜色 */
+.cluster-container::-webkit-scrollbar-thumb {
+  background-color: #d4d8e2;
+} /* 滚动条的内层滑块颜色 */
+.cluster-container::-webkit-scrollbar-button {
+  background-color: #fff;
+  display: none;
+} /* 滑轨两头的监
