mutipul file support

--- a/Backend/templates/index.html
+++ b/Backend/templates/index.html
@@ -9,7 +9,7 @@
     </head>
 
     <body>
-        <div id="3d-graph">
+        <div id="3d-graph" class="{{jsonname}}">
             <div>
                 <div>
                     <div>
