--- a/Backend/templates/index.html
+++ b/Backend/templates/index.html
@@ -33,19 +33,18 @@
         </div>
         <div class="right-sidebar">
             <div class="control-panel">
-                <form action="lualal" , method="GET">
+                <form action="chpara" , method="POST">
                     <div>
                         <label for="Treshold">Treshold:</label>
-                        <input type="range" id="Treshold" />
+                        <input type="range" id="Treshold" min="0" max="100" step="0.1"/>
                     </div>
                     <div>
-                        <label for="MaxDegree">MaxDegree:</label>
+                        <label for="MaxDegree" min="0" max="100" step="1">MaxDegree:</label>
                         <input type="range" id="MaxDegree" />
                     </div>
                     <div>
-                        <label for="msg">Message:</label>
-                        <textarea id="msg"></textarea>
-                    </div>
+                        <input type="submit" value="Change">
+                      </div>
                 </form>
             </div>
         </div>
