--- a/Backend/static/style.css
+++ b/Backend/static/style.css
@@ -95,12 +95,10 @@ canvas {
     height: 696px;
 }
 
-
-
-
-.left-sidebar, .right-sidebar {
+.left-sidebar,
+.right-sidebar {
     position: fixed;
-    height: 500px;
+
     width: 200px;
     color: white;
     display: flex;
@@ -111,11 +109,13 @@ canvas {
 }
 
 .left-sidebar {
+    height: 200px;
     left: 10px;
     top: 10px;
 }
 
 .right-sidebar {
+    height: 500px;
     right: 10px;
     top: 10px;
 }
@@ -130,7 +130,7 @@ canvas {
 .image-container img {
     width: 100%;
     height: 100%;
-    object-fit:cover;
+    object-fit: cover;
 }
 
 .cluster-container {
@@ -140,28 +140,76 @@ canvas {
     overflow-x: hidden;
 }
 
-
-.cluster-container:hover{
+.cluster-container:hover {
     overflow-y: auto;
-  }
+}
 .cluster-container::-webkit-scrollbar {
-  width: 2px;
+    width: 2px;
 }
 .cluster-container::-webkit-scrollbar-track-piece {
-  background-color: #fff;
+    background-color: #fff;
 } /* 滚动条的内层滑轨背景颜色 */
 .cluster-container::-webkit-scrollbar-track {
-  background-color: #fff;
+    background-color: #fff;
 } /* 滚动条的外层滑轨背景颜色 */
 .cluster-container::-webkit-scrollbar-thumb {
-  background-color: #d4d8e2;
+    background-color: #d4d8e2;
 } /* 滚动条的内层滑块颜色 */
 .cluster-container::-webkit-scrollbar-button {
-  background-color: #fff;
-  display: none;
+    background-color: #fff;
+    display: none;
 } /* 滑轨两头的监
 
 
 /*   control panel */
 
-
+.slider {
+    user-select: none;
+    position: relative;
+    height: 3rem;
+    margin: 3rem auto;
+    display: flex;
+    flex-direction: column;
+}
+.slider-input {
+    -webkit-appearance: none;
+    background-color: transparent;
+    position: absolute;
+    margin-left: -2.5%;
+    height: 2rem;
+    outline: none;
+    width: 100%;
+}
+.slider-input::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    width: 2rem;
+    height: 8rem;
+}
+.slider-thumb {
+    cursor: grab;
+    height: 2rem;
+    width: 2rem;
+    border-radius: 1rem;
+    position: absolute;
+    top: -0.75rem;
+    background-color: #be1450;
+    font-size: 100%;
+    line-height: 2rem;
+    text-align: center;
+}
+.slider-thumb {
+    cursor: grab;
+    left: 50%;
+    margin-left: -1rem;
+}
+.slider-track {
+    height: 0.5rem;
+    background-color: #06a;
+    border-radius: 0.25rem;
+}
+.slider-level {
+    height: 0.5rem;
+    background-color: #be1450;
+    width: 50%;
+    border-radius: 1rem;
+}
