--- a/Backend/templates/index.html
+++ b/Backend/templates/index.html
@@ -29,7 +29,6 @@
             <div class="image-container">
                 <img src="../static/imgs/train/华中科技大学_China.jpeg" />
             </div>
-            <div class="cluster-container"></div>
         </div>
         <div class="right-sidebar">
             <div class="control-panel">
@@ -58,17 +57,21 @@
                         <input type="submit" value="Change" />
                     </div>
                 </form>
-                <div>
-                    <label for="nodeSize">nodeSize:</label>
+                <div id="volume" class="slider">
+                    <div class="slider-track">
+                        <div class="slider-thumb">10</div>
+                        <div class="slider-level"></div>
+                    </div>
                     <input
+                        class="slider-input"
                         type="range"
-                        id="MaxDegree"
+                        value="10"
                         min="0"
-                        max="10"
-                        step="1"
+                        max="20"
                     />
                 </div>
             </div>
+            <div class="cluster-container"></div>
         </div>
         <script src="../static/index.js"></script>
     </body>
