--- a/Backend/templates/index.html
+++ b/Backend/templates/index.html
@@ -54,18 +54,18 @@
                         />
                     </div>
                     <div>
-                        <input type="submit" value="Change" />
+                        <input type="submit" value="Change" id="submit" />
                     </div>
                 </form>
                 <div id="volume" class="slider">
                     <div class="slider-track">
-                        <div class="slider-thumb">10</div>
+                        <div class="slider-thumb">4</div>
                         <div class="slider-level"></div>
                     </div>
                     <input
                         class="slider-input"
                         type="range"
-                        value="10"
+                        value="4"
                         min="0"
                         max="20"
                     />
