--- a/Backend/templates/index.html
+++ b/Backend/templates/index.html
@@ -1,111 +1,103 @@
 <html>
-    <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <link rel="stylesheet" type="text/css" href="../static/style.css" />
-        <link href="https://cdn.bootcss.com/font-awesome/5.8.0/css/all.css" rel="stylesheet" />
-        <script src="../static/three.js"></script>
 
-        <script src="../static/3d-force-graph.js"></script>
-        <!--<script src="../../dist/3d-force-graph.js"></script>-->
-    </head>
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link rel="stylesheet" type="text/css" href="../static/style.css" />
+    <link href="https://cdn.bootcss.com/font-awesome/5.8.0/css/all.css" rel="stylesheet" />
+    <script src="../static/three.js"></script>
 
-    <body>
-        <div id="3d-graph" class="{{ jsonname }}">
+    <script src="../static/3d-force-graph.js"></script>
+    <!--<script src="../../dist/3d-force-graph.js"></script>-->
+</head>
+
+<body>
+    <div id="3d-graph" class="{{ jsonname }}">
+        <div>
             <div>
                 <div>
-                    <div>
-                        <div class="scene-nav-info">
-                            Left-click: rotate, Mouse-wheel/middle-click: zoom,
-                            Right-click: pan
-                        </div>
-                        <div class="scene-tooltip"></div>
-                        <canvas></canvas>
+                    <div class="scene-nav-info">
+                        Left-click: rotate, Mouse-wheel/middle-click: zoom,
+                        Right-click: pan
                     </div>
+                    <div class="scene-tooltip"></div>
+                    <canvas></canvas>
                 </div>
-                <div class="graph-info-msg"></div>
             </div>
+            <div class="graph-info-msg"></div>
         </div>
-        <div class="search-box">
-            <input
-                class="search-txt"
-                type="text"
-                placeholder="Type to search"
-            />
+    </div>
+
+    <div class="Cluster_Changer">
+        <div style="text-align: center; margin: 10px auto">Clusters</div>
+        <select>
+        </select>
+    </div>
+
+
+    <div class="search-box">
+        <form action="search" method="GET">
+            <input class="search-txt" type="text" placeholder="Type to search" />
             <a class="search-btn" href="#">
                 <i class="fas fa-search"></i>
             </a>
+            <input type="submit" value="" style="display: none; height: 0; width: 0;" />
+        </form>
+
+    </div>
+    <div class="left-sidebar">
+        <div class="image-container">
+            <img src="../static/imgs/train/华中科技大学_China.jpeg" />
         </div>
-        <div class="left-sidebar">
-            <div class="image-container">
-                <img src="../static/imgs/train/华中科技大学_China.jpeg" />
-            </div>
-        </div>
-        <div class="right-sidebar">
-            <div class="control-panel">
-                <form action="chpara" , method="GET">
-                    <div>
-                        <label for="Treshold">Treshold:</label>
-                        <input
-                            type="text"
-                            id="Treshold"
-                            name="Treshold"
-                            autocomplete="off"
-                        />
-                    </div>
-                    <div>
-                        <input type="submit" value="Change" id="submit" />
-                    </div>
-                </form>
-                <div style="text-align: center">
-                    Ball Size
+    </div>
+    <div class="right-sidebar">
+        <div class="control-panel">
+            <form action="chpara" , method="GET">
+                <div>
+                    <label for="Threshold">Threshold:</label>
+                    <input type="text" id="Threshold" name="Threshold" autocomplete="off" />
                 </div>
-                <div id="volume" class="slider">
-                    <div class="slider-track">
-                        <div class="slider-thumb">4</div>
-                        <div class="slider-level"></div>
-                    </div>
-                    <input
-                        class="slider-input"
-                        type="range"
-                        value="4"
-                        min="0"
-                        max="20"
-                    />
+                <div>
+                    <input type="submit" value="Change" id="submit" />
                 </div>
-                <div style="text-align: center">
-                    Image Size
-                </div>
-                <div id="ImageSize" class="slider">
-                    <div class="slider-track" id="slider-track">
-                        <div class="slider-thumb" id="slider-thumb">25%</div>
-                        <div class="slider-level" id="slider-level"></div>
-                    </div>
-                    <input
-                        disabled="disabled"
-                        class="slider-input"
-                        type="range"
-                        value="25"
-                        min="0"
-                        max="100"
-                        id="slider-input"
-                    />
-                </div>
-                
-            </div>
-            
+            </form>
             <div style="text-align: center">
-                <div style="text-align: center; margin: 10px auto">Display</div>
-                <select>
-                    <option value="Ball">Ball</option>
-                    <option value="Image">Image</option>
-                </select>
+                Ball Size
             </div>
-            <!-- <div id="threshold" style="display: block; margin: 10px">
-                <input type="range" max="39.8" min="35.0" step="0.2">
-            </div> -->
-            <div class="cluster-container"></div>
+            <div id="volume" class="slider">
+                <div class="slider-track">
+                    <div class="slider-thumb">4</div>
+                    <div class="slider-level"></div>
+                </div>
+                <input class="slider-input" type="range" value="4" min="0" max="20" />
+            </div>
+            <div style="text-align: center">
+                Image Size
+            </div>
+            <div id="ImageSize" class="slider">
+                <div class="slider-track" id="slider-track">
+                    <div class="slider-thumb" id="slider-thumb">25%</div>
+                    <div class="slider-level" id="slider-level"></div>
+                </div>
+                <input disabled="disabled" class="slider-input" type="range" value="25" min="0" max="100"
+                    id="slider-input" />
+            </div>
 
         </div>
-        <script src="../static/index.js"></script>
-    </body>
+
+        <div style="text-align: center">
+            <div style="text-align: center; margin: 10px auto">Display</div>
+            <select>
+                <option value="Ball">Ball</option>
+                <option value="Image">Image</option>
+            </select>
+        </div>
+        <!-- <div id="threshold" style="display: block; margin: 10px">
+                <input type="range" max="39.8" min="35.0" step="0.2">
+            </div> -->
+        <div class="cluster-container"></div>
+
+    </div>
+    <script src="../static/index.js"></script>
+</body>
+
 </html>
